--- a/views/caps/new.ejs
+++ b/views/caps/new.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <a href="/caps/">Back to Caps</a>
     <title>Create a Cap</title>
   </head>
   <body>
