--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <a href="/caps">Browse Caps<</a>
     <title>The Cap App</title>
   </head>
   <body>
