--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <a href="/caps">Browse Caps<</a>
+    <a href="/caps">Browse Caps</a>
     <title>The Cap App</title>
   </head>
   <body>
-    <h1>You've Entered the Cap App!</h1>
+    <h1>You've Entered The Cap App!</h1>
     <p>An app to make you Pop up Top!</p>
   </body>
 </html>
