--- a/views/caps/show.ejs
+++ b/views/caps/show.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <a href="/caps/">Back to Caps</a>
+    <a href="/caps/<%= cap._id %>/edit">Edit <%= cap.name %></a>
     <title><%= cap.name %></title> 
   </head>
   <body>
@@ -17,6 +18,7 @@
    <form action="/caps/<%= cap._id %>?_method=DELETE" method="POST">
     <button type="submit">Delete <%= cap.name %></button>
    </form>
+
 
   </body>
 </html>
